set height on tr to avoid jumping when images load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,6 +325,8 @@ code {
   color: #333;
 }
 
+.org-table tr { height: 57px; }
+
 /* Animations */
 /* -------------------------------------------------------------------------- */
 
